# slough-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  entrypoint.py  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: ARCHITECTURE.md  COSTS.md  MVP-SPEC.md  ROADMAP.md  SETUP.md  SLACK-API.md  TESTING.md
infra/: cloudformation.yaml  deploy.sh
infra/iam/: 01-cfn-deploy.json  02-vpc-network.json  03-ecs-fargate.json  04-data-stores.json  05-alb-waf.json  06-supporting.json  README.json  setup-iam.sh
migrations/: env.py
migrations/versions/: 001_initial_tables.py  002_make_user_token_nullable.py  003_add_admin_id.py  004_add_uninstall_fields.py  005_add_pgvector_embeddings.py  006_add_embedding_ivfflat_index.py  007_add_is_reflected_column.py
scripts/: check_db_v3.py  check_psycopg.py  init-db.sql
src/: app.py  config.py  web.py  worker.py
src/handlers/actions/: feedback.py  onboarding.py  review_request.py
src/handlers/commands/: help.py  ingest.py  rule.py  stats.py
src/handlers/events/: message.py  uninstall.py
src/handlers/views/: edit_answer.py  onboarding.py
src/services/: redis_client.py
src/services/ai/: __init__.py  embeddings.py  graph.py  memory.py  nodes.py  persona.py  persona_extractor.py  state.py  vector_store.py
src/services/db/: __init__.py  connection.py  ingestion_jobs.py  (+5 more)
src/tasks/: feedback_sync.py  ingestion.py  weekly_report.py
src/utils/: blocks.py  keywords.py  logger.py  prohibited.py
tests/unit/: test_lazy_imports.py
(+3 files in other folders)
