[project]
name = "slough-ai"
version = "0.1.0"
description = "Slack 대화로 의사결정자의 사고를 학습하는 AI"
requires-python = ">=3.12"
dependencies = [
    # Slack
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",

    # Web framework
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",

    # LLM
    "openai>=1.30.0",

    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Queue
    "celery>=5.4.0",
    "redis>=5.0.0",

    # Config & Logging
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",

    # Utilities
    "httpx>=0.27.0",
    "uuid6>=2024.1.12",
]
